--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "satisfactory-blueprint-web",
+  "name": "imagestosatisfactoryblueprints",
   "version": "1.0.1",
   "private": true,
   "scripts": {
@@ -9,9 +9,6 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "buffer": "^6.0.3",
-    "fs": "^0.0.1-security",
-    "path": "^0.12.7",
     "vue": "^3.4.0"
   },
   "devDependencies": {
@@ -24,6 +21,7 @@
     "postcss": "^8.0.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
